# new-mm-sd

./: .gitignore  README.md  benchmark_llavaov_open.py  benchmark_qwen_open.py  instructions_500.csv  join_dfs.py  process_instructions.py  pyproject.toml  run_qwen_llmdraft_wildvision.py  run_qwen_wildvision.py  select_samples.ipynb  spd.py  spd_llmdraft.py  spd_ov.py  utils.py
analysis/: calc_stats.py  categorize_instructions.py  select_samples.ipynb
