[project]
name = "new-mm-sd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "autoawq>=0.2.6",
    "flash-attn>=2.6.3",
    "pillow>=11.0.0",
    "qwen-vl-utils>=0.0.8",
    "setuptools>=75.3.0",
    "torchvision>=0.18.1",
    "transformers",
    "wheel>=0.44.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "617b21273a349bd3a94e2b3bfb83f8089f45749b" }
