[project]
name = "new-mm-sd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "autoawq>=0.2.6",
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "openai>=1.56.0",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "pyspark>=3.5.3",
    "python-dotenv>=1.0.1",
    "qwen-vl-utils>=0.0.8",
    "rich>=13.9.4",
    "scikit-posthocs>=0.11.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "setuptools>=75.3.0",
    "setuptools>=75.3.0",
    "tenacity>=9.0.0",
    "torchvision>=0.18.1",
    "transformers",
    "wheel>=0.44.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "617b21273a349bd3a94e2b3bfb83f8089f45749b" }
